@@ -1,3 +1,7 @@
+2009-02-16 Sarka Todorova <sarka.todorova@cern.ch>
+	* fix return values (gcc43 warnings) 
+	* tagged as MuonTrackingGeometry-00-04-22
+
 2009-02-11 Sarka Todorova <sarka.todorova@cern.ch>
 	* update hardcoded partitions 
 	* tagged as MuonTrackingGeometry-00-04-21
